p5.jsを追加した

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>yzのPortfolio</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>初めてのウェブページ</title>
-</head>
+  <body>
+    <h1>yzのportfolio</h1>
 
-<body>
-  <p>これは私が初めて作ったウェブページです。</p>
-</body>
+    <p>これは私が初めて作ったウェブページです。</p>
 
+    <iframe
+      width="400"
+      height="400"
+      src="https://editor.p5js.org/2029855/embed/IWLX6SK8w"
+    ></iframe>
+  </body>
 </html>
